# Wordly

./: Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
wordly/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
wordly/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
wordly/users/migrations/: 0001_initial.py
